force-app/main/default/objects/Dog_Trick__c/Dog_Trick__c.object-meta.xml
<CustomObject>
    <label>Dog Trick</label>
    <nameField>
        <displayFormat>Trick #{0000}</displayFormat>
        <label>Trick Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dog Tricks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>