force-app/main/default/objects/Dog_Trick__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Describe how your pup did on this trick and what you could work on next time.</description>
    <inlineHelpText>Enter some notes about your dog&apos;s paw-gress.</inlineHelpText>
    <label>De-tails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>