force-app/main/default/objects/Dog_Trick__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipName>Dog_Tricks</relationshipName>
    <type>Lookup</type>
</CustomField>