force-app/main/default/objects/Dog_Trick__c/fields/Pawgress__c.field-meta.xml
<CustomField>
    <fullName>Pawgress__c</fullName>
    <description>Rate your pawgress on this trick.</description>
    <inlineHelpText>Rate your pawgress on this trick.</inlineHelpText>
    <label>Howl you paw-gressing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - A little ruff!</fullName>
                <label>1 - Still a little ruff!</label>
            </value>
            <value>
                <fullName>2 - Woof woof!</fullName>
            </value>
            <value>
                <fullName>3 - Good dog!</fullName>
                <label>3 - Having a ball!</label>
            </value>
            <value>
                <fullName>4 - Fur real!</fullName>
                <label>4 - Fur real! I got this!</label>
            </value>
            <value>
                <fullName>5 - Pawsitively Pawsome!</fullName>
                <label>5 - Pawsitively pawsome!</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>