force-app/main/default/objects/Dog_Trick__c/fields/Pick_a_Trick__c.field-meta.xml
<CustomField>
    <fullName>Pick_a_Trick__c</fullName>
    <description>Pick a trick and track your dog&apos;s progress.</description>
    <inlineHelpText>Select a trick to track.</inlineHelpText>
    <label>Pick a Trick</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sit</fullName>
            </value>
            <value>
                <fullName>Stay</fullName>
            </value>
            <value>
                <fullName>Lay down</fullName>
            </value>
            <value>
                <fullName>Shake</fullName>
            </value>
            <value>
                <fullName>Twirl</fullName>
            </value>
            <value>
                <fullName>Roll over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>