force-app/main/default/objects/Dog_Trick__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>When did you practice this trick?</description>
    <inlineHelpText>When did you practice this trick?</inlineHelpText>
    <label>When did you practice?</label>
    <type>DateTime</type>
</CustomField>